# conda_tool

./: .gitignore  README.md  config.json.tpl  extract.py  modify.py  pylintrc  pyproject.toml  requirements.txt  utils.py
.github/workflows/: pylint.yml
docs/: README_EN.md  README_ZH.md  architecture_en.md  architecture_zh.md  deployment_en.md  deployment_zh.md  modify_rule_details.md  modify_rule_details_en.md  modify_rule_details_zh.md  requirements_en.md  requirements_zh.md  testing_en.md  testing_zh.md
src/conda_tool/: __init__.py  __main__.py  dlpkg.py  extract.py  makedb.py  modify.py  recipe.py  repack.py  utils.py
tests/: test_dlpkg.py  test_extract.py  test_logging_names.py  test_main.py  test_makedb.py  test_modify.py  test_recipe.py  test_repack.py  test_utils.py
